force-app/main/default/objects/OrgAdminSettings__c/OrgAdminSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Org Admin Settings</label>
</CustomObject>