force-app/main/default/objects/OrgAdminSettings__c/fields/AfterTriggersOn__c.field-meta.xml
<CustomField>
    <fullName>AfterTriggersOn__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Turn on ALL after triggers</description>
    <inlineHelpText>Turn on ALL after triggers</inlineHelpText>
    <label>After Triggers On</label>
    <type>Checkbox</type>
</CustomField>