force-app/main/default/objects/OrgAdminSettings__c/fields/BeforeTriggersOn__c.field-meta.xml
<CustomField>
    <fullName>BeforeTriggersOn__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Turn on ALL before triggers</description>
    <inlineHelpText>Turn on ALL before triggers</inlineHelpText>
    <label>Before Triggers On</label>
    <type>Checkbox</type>
</CustomField>