force-app/main/default/objects/OrgAdminSettings__c/fields/DebugOn__c.field-meta.xml
<CustomField>
    <fullName>DebugOn__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Turn on debugging</description>
    <inlineHelpText>Turn on debugging</inlineHelpText>
    <label>Debug On</label>
    <type>Checkbox</type>
</CustomField>