force-app/main/default/objects/OrgAdminSettings__c/fields/DeleteTriggersOn__c.field-meta.xml
<CustomField>
    <fullName>DeleteTriggersOn__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Turn on ALL delete triggers</description>
    <inlineHelpText>Turn on ALL delete triggers</inlineHelpText>
    <label>Delete Triggers On</label>
    <type>Checkbox</type>
</CustomField>