force-app/main/default/objects/OrgAdminSettings__c/fields/InsertTriggersOn__c.field-meta.xml
<CustomField>
    <fullName>InsertTriggersOn__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Turn on ALL insert triggers</description>
    <inlineHelpText>Turn on ALL insert triggers</inlineHelpText>
    <label>Insert Triggers On</label>
    <type>Checkbox</type>
</CustomField>