force-app/main/default/objects/OrgAdminSettings__c/fields/ProcessBuilderOn__c.field-meta.xml
<CustomField>
    <fullName>ProcessBuilderOn__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Turn on ALL process builder processes</description>
    <inlineHelpText>Turn on ALL process builder processes</inlineHelpText>
    <label>Process Builder On</label>
    <type>Checkbox</type>
</CustomField>