force-app/main/default/objects/OrgAdminSettings__c/fields/TriggerSwitchOn__c.field-meta.xml
<CustomField>
    <fullName>TriggerSwitchOn__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Turn on Trigger Switch functionality</description>
    <inlineHelpText>Turn on Trigger Switch functionality</inlineHelpText>
    <label>Trigger Switch Custom Setting On</label>
    <type>Checkbox</type>
</CustomField>