force-app/main/default/objects/OrgAdminSettings__c/fields/TurnAllTriggersOff__c.field-meta.xml
<CustomField>
    <fullName>TurnAllTriggersOff__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This will turn off ALL triggers and will supercede Trigger Switch settings</description>
    <inlineHelpText>This will turn off ALL triggers and will supercede Trigger Switch settings</inlineHelpText>
    <label>Turn All Triggers Off</label>
    <type>Checkbox</type>
</CustomField>