force-app/main/default/objects/OrgAdminSettings__c/fields/UndeleteTriggersOn__c.field-meta.xml
<CustomField>
    <fullName>UndeleteTriggersOn__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Turn on ALL undelete triggers</description>
    <inlineHelpText>Turn on ALL undelete triggers</inlineHelpText>
    <label>Undelete Triggers On</label>
    <type>Checkbox</type>
</CustomField>