force-app/main/default/objects/OrgAdminSettings__c/fields/UpdateTriggersOn__c.field-meta.xml
<CustomField>
    <fullName>UpdateTriggersOn__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Turn on ALL update triggers</description>
    <inlineHelpText>Turn on ALL update triggers</inlineHelpText>
    <label>Update Triggers On</label>
    <type>Checkbox</type>
</CustomField>