force-app/main/default/objects/OrgAdminSettings__c/fields/ValidationRulesOn__c.field-meta.xml
<CustomField>
    <fullName>ValidationRulesOn__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Turn on ALL validation rules</description>
    <inlineHelpText>Turn on ALL validation rules</inlineHelpText>
    <label>Validation Rules On</label>
    <type>Checkbox</type>
</CustomField>