force-app/main/default/objects/OrgAdminSettings__c/fields/WorkflowsOn__c.field-meta.xml
<CustomField>
    <fullName>WorkflowsOn__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Turn on ALL workflows</description>
    <inlineHelpText>Turn on ALL workflows</inlineHelpText>
    <label>Workflows On</label>
    <type>Checkbox</type>
</CustomField>